--- a/css/common.css
+++ b/css/common.css
@@ -30,7 +30,7 @@ body {
     justify-content: space-between;
     overflow-x: hidden;
     background: var(--light-orange);
-    min-height: 100vh;
+    min-height: calc(var(--vh, 1vh) * 100);
 }
 
 #wrapper {
